--- a/FeaturedPage/Base.lproj/Main.storyboard
+++ b/FeaturedPage/Base.lproj/Main.storyboard
@@ -1,24 +1,198 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Zd7-Jl-q6p">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FeaturedPage" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8N9-vb-HBL">
+                                <rect key="frame" x="0.0" y="179" width="414" height="614"/>
+                                <color key="backgroundColor" red="0.28627450980000002" green="0.29411764709999999" blue="0.30588235289999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" red="0.28627450980000002" green="0.29411764709999999" blue="0.30588235289999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="414" id="V6p-er-jcE"/>
+                                </constraints>
+                                <color key="sectionIndexColor" red="0.28955353769999997" green="0.57029305269999997" blue="0.55790022360000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationLevel="2" indentationWidth="10" reuseIdentifier="cell" rowHeight="169" id="sc5-1S-PDL" customClass="CellTableViewCell" customModule="FeaturedPage" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="169"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sc5-1S-PDL" id="THm-Q0-VBa">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="169"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Pizza" translatesAutoresizingMaskIntoConstraints="NO" id="gf4-cN-nwG">
+                                                    <rect key="frame" x="20" y="4" width="136" height="161"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="141" id="0G0-8O-UOC"/>
+                                                        <constraint firstAttribute="width" constant="136" id="4kf-iS-Cb0"/>
+                                                        <constraint firstAttribute="width" secondItem="gf4-cN-nwG" secondAttribute="height" multiplier="136:141" id="eNX-fv-caf"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.28627450980000002" green="0.29411764709999999" blue="0.30588235289999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="gf4-cN-nwG" secondAttribute="trailing" constant="258" id="1ko-ht-U2w"/>
+                                                <constraint firstAttribute="bottom" secondItem="gf4-cN-nwG" secondAttribute="bottom" constant="4" id="B8U-qK-jPg"/>
+                                                <constraint firstItem="gf4-cN-nwG" firstAttribute="top" secondItem="THm-Q0-VBa" secondAttribute="top" constant="4" id="ixA-Db-BeS"/>
+                                                <constraint firstItem="gf4-cN-nwG" firstAttribute="leading" secondItem="THm-Q0-VBa" secondAttribute="leading" constant="20" symbolic="YES" id="ofo-Kl-hci"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.44" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="tintColor" red="0.28627450980000002" green="0.29411764709999999" blue="0.30588235289999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="cXo-v7-Ctn"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="X12-gw-pXD"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Featured" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GIe-ZN-WlK">
+                                <rect key="frame" x="20" y="88" width="173" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <color key="textColor" red="0.45098039215686275" green="0.46274509803921571" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8N9-vb-HBL" secondAttribute="bottom" constant="20" id="N0W-1P-XLj"/>
+                            <constraint firstItem="8N9-vb-HBL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="TMK-VK-VU1"/>
+                            <constraint firstItem="8N9-vb-HBL" firstAttribute="top" secondItem="GIe-ZN-WlK" secondAttribute="bottom" constant="31" id="lch-m9-ml2"/>
+                            <constraint firstItem="8N9-vb-HBL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yvg-1S-Asz"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Si1-SM-xEQ"/>
+                    <connections>
+                        <outlet property="FeaturedTableView" destination="8N9-vb-HBL" id="y8K-Jd-fip"/>
+                        <outlet property="featuredTableView" destination="8N9-vb-HBL" id="ouv-4f-5i2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="4534.7826086956529" y="75.669642857142847"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="XXR-Qz-sbN">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="bJA-XU-zNT" customClass="DetailViewController" customModule="FeaturedPage" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ya0-xh-Wxu">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XMj-cR-91i">
+                                <rect key="frame" x="20" y="241" width="374" height="287"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ic-gF-mH5">
+                                <rect key="frame" x="20" y="95" width="253" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="textColor" red="0.45098039215686275" green="0.46274509803921571" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lb4-WJ-wni">
+                                <rect key="frame" x="20" y="560" width="374" height="158"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <color key="textColor" red="0.60392156862745094" green="0.85882352941176465" blue="0.83137254901960778" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oaR-ew-luF">
+                                <rect key="frame" x="126" y="748" width="162" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Get this recipe!">
+                                    <color key="titleColor" red="0.6705882353" green="0.36078431370000003" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="r2L-pq-JN5"/>
+                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <connections>
+                        <outlet property="img" destination="XMj-cR-91i" id="r9Z-qf-C5P"/>
+                        <outlet property="lbl" destination="6ic-gF-mH5" id="aAs-ja-4Ch"/>
+                        <outlet property="recipelbl" destination="Lb4-WJ-wni" id="oyO-0Q-vHj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QUz-ZD-VPC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5353.6231884057979" y="75.669642857142847"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Dc3-vH-g0R">
+            <objects>
+                <viewController id="aoI-tT-g7j" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lz1-00-16w">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="1Xo-uk-0gL"/>
+                        <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="Nuk-bb-HiV"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Ml-SA-vMP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3625" y="804"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="EPe-1A-n6h">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Zd7-Jl-q6p" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0Jz-Xu-rUC">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="8w7-iO-wvt" kind="relationship" relationship="viewControllers" id="xQv-V9-Uxz"/>
+                        <segue destination="aoI-tT-g7j" kind="relationship" relationship="viewControllers" id="7jE-4R-iCO"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dwr-MW-A6B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2765" y="76"/>
+        </scene>
+        <!--Featured-->
+        <scene sceneID="SjF-hZ-pov">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8w7-iO-wvt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Featured" image="star.fill" catalog="system" id="Grn-wZ-quc"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="prZ-bw-EOa">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="lU5-MQ-dHk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="prn-DQ-zgj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3624.6376811594205" y="75.669642857142847"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Pizza" width="1900" height="1425"/>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
+        <systemColor name="tertiaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
